manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-form-deployment
  labels:
    app: showks-form
  namespace: showks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-form
  template:
    metadata:
      labels:
        app: showks-form
    spec:
      containers:
      - name: showks-form
        image: containerdaysjp/showks-form:latest
        lifecycle:
          postStart:
            exec:
              command:
                - /usr/src/showks-form/post-start.sh
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: showks
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: showks-form-service
  namespace: showks
  labels:
    app: showks-form
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: showks-form
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: showks
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-form
spec:
  rules:
  - host: form.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-form-service
          servicePort: 3000
